starting pt 6_2, just started

--- a/src/autoencoder_playthrough_pt6_2.ipynb
+++ b/src/autoencoder_playthrough_pt6_2.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "class simple_autoencoder(torch.nn.Module):\n",
+    "class encoder(torch.nn.Module):\n",
     "    def __init__(self):\n",
     "        super(simple_autoencoder, self).__init__()\n",
     "\n",
@@ -192,28 +192,8 @@
     "        self.enc_dropout2 = nn.Dropout(0.5)\n",
     "        self.enc_fc1 = nn.Linear(9216, 128)\n",
     "        self.enc_fc2 = nn.Linear(128, 10)\n",
-    "\n",
-    "        self.dec_fc1 = nn.Linear(10,128)\n",
-    "        self.dec_fc2 = nn.Linear(128,9216)\n",
-    "        self.dec_fc3 = nn.Linear(9216,30976)\n",
-    "        self.dec_dropout1 = nn.Dropout(0.5)\n",
-    "        self.dec_dropout2 = nn.Dropout(0.25)\n",
-    "        self.dec_dropout3 = nn.Dropout(0.25)\n",
-    "        self.dec_deconv1 = nn.ConvTranspose2d(64, 32, kernel_size=3, stride=1)\n",
-    "        self.dec_deconv2 = nn.ConvTranspose2d(32, 16, kernel_size=3, stride=1)\n",
-    "        self.dec_deconv3 = nn.ConvTranspose2d(16, 1, kernel_size=3, stride=1)\n",
-    "\n",
-    "\n",
-    "        self.upsample = nn.Upsample(scale_factor=2, mode='nearest')\n",
-    "\n",
-    "        self.dis_conv1 = nn.Conv2d(1, 32, 3, 1)\n",
-    "        self.dis_conv2 = nn.Conv2d(32, 64, 3, 1)\n",
-    "        self.dis_dropout1 = nn.Dropout(0.25)\n",
-    "        self.dis_dropout2 = nn.Dropout(0.5)\n",
-    "        self.dis_fc1 = nn.Linear(9216, 128)\n",
-    "        self.dis_fc2 = nn.Linear(128, 1)\n",
-    "\n",
-    "    def encoder(self,input):\n",
+    "    \n",
+    "    def forward(self,input):\n",
     "        x = input.view(-1,1,28,28)\n",
     "        # print(x.shape)\n",
     "        x = self.enc_conv1(x) # now a (batch_size, 32, 26, 26) sized tensor\n",
@@ -234,8 +214,22 @@
     "        # print(x.shape)\n",
     "        latent = F.sigmoid(x)\n",
     "        return latent\n",
+    "        \n",
+    "class decoder(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(simple_autoencoder, self).__init__()\n",
     "\n",
-    "    def decoder(self, latent):\n",
+    "        self.dec_fc1 = nn.Linear(10,128)\n",
+    "        self.dec_fc2 = nn.Linear(128,9216)\n",
+    "        self.dec_fc3 = nn.Linear(9216,30976)\n",
+    "        self.dec_dropout1 = nn.Dropout(0.5)\n",
+    "        self.dec_dropout2 = nn.Dropout(0.25)\n",
+    "        self.dec_dropout3 = nn.Dropout(0.25)\n",
+    "        self.dec_deconv1 = nn.ConvTranspose2d(64, 32, kernel_size=3, stride=1)\n",
+    "        self.dec_deconv2 = nn.ConvTranspose2d(32, 16, kernel_size=3, stride=1)\n",
+    "        self.dec_deconv3 = nn.ConvTranspose2d(16, 1, kernel_size=3, stride=1)\n",
+    "\n",
+    "    def forward(self, latent):\n",
     "        # print(\"decoder\")\n",
     "        x = self.dec_fc1(latent)\n",
     "        # print(x.shape)\n",
@@ -255,21 +249,42 @@
     "        x = self.dec_deconv2(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.dec_deconv3(x)\n",
-    "        x = F.sigmoid(x)\n",
+    "        x = F.relu(x)\n",
     "        x = torch.flatten(x,1)\n",
     "        return x\n",
-    "\n",
+    "        \n",
+    "class discriminator(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        self.dis_fc1 = nn.Linear(10,128)\n",
+    "        self.dis_fc2 = nn.Linear(128,9216)\n",
+    "        self.dis_fc3 = nn.Linear(9216,128)\n",
+    "        self.dis_fc3 = nn.Linear(128,1)\n",
+    "        self.dis_dropout1 = nn.Dropout(0.5)\n",
+    "        self.dis_dropout2 = nn.Dropout(0.25)\n",
+    "        self.dis_dropout3 = nn.Dropout(0.25)\n",
     "\n",
     "        \n",
-    "    def forward(self, input):\n",
+    "    def forward(self, latent)\n",
+    "    \n",
+    "        x = self.dis_fc1(latent)\n",
+    "        # print(x.shape)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.dis_dropout1(x)\n",
     "        \n",
-    "        latent = self.encoder(input)\n",
-    "        x = self.decoder(latent)\n",
+    "        x = self.dis_fc2(x)\n",
+    "        # print(x.shape)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.dis_dropout2(x)\n",
+    "        \n",
+    "        x = self.dis_fc3(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.dis_dropout3(x)\n",
+    "                \n",
+    "        x = self.dis_fc4(x)\n",
+    "        x = F.sigmoid(x)\n",
+    "        return x\n",
+    "        \n",
     "\n",
-    "        return latent, x\n",
-    "\n",
-    "    def generate_image_from_one_hot(self,latent):\n",
-    "        return self.decoder(latent)\n",
     "\n",
     "def visualise_prediction(model, batch,index = 0):\n",
     "    data,label = batch\n",
